# kodi-addons

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: deploy.yaml  lint-gha.yaml  lint.yaml  lint.yml
plugin.video.dropout/: __init__.py  addon.xml  entry.py  player.py  pyproject.toml
plugin.video.dropout/resources/: settings.xml
plugin.video.dropout/resources/language/resource.language.en_gb/: strings.po
plugin.video.dropout/resources/lib/: addon.py  api.py  config.py  language.py  patch.py  player.py  plugin.py  router.py  settings.py  ui.py  utils.py
repo/: addon.xml
tools/: create_listing.py
