[project]
name = "kodi-addons"
version = "0"
description = "Addons for Kodi (XBMC) "
readme = "README.md"
requires-python = "==3.11.9"

[dependency-groups]
dev = ["ruff==0.15.19", "ty==0.0.52"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["INP001", "T201"]
"vendor/*.py" = ["ALL"]

[tool.ty.src]
exclude = ["vendor"]

[tool.uv.workspace]
members = ["plugin.video.dropout"]
